--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "lint": "pnpm -w -r eslint . --fix"
   },
   "author": "SindreSau",
-  "packageManager": "pnpm@10.28.2"
+  "packageManager": "pnpm@10.28.2",
+  "dependencies": {
+    "@tailwindcss/vite": "^4.2.0",
+    "tailwindcss": "^4.2.0"
+  }
 }
